# RustTetris

./: Cargo.toml
tetris/: Cargo.toml
tetris-common/: Cargo.toml
tetris-common/src/platform/: mod.rs
tetris/src/: main.rs
tetris/src/constant/: base_constants.rs  mod.rs
tetris/src/enumerate/: color.rs  mod.rs
tetris/src/model/: canvas.rs  canvas_piece.rs  canvas_pixel.rs  coordinate.rs  mod.rs
tetris/src/test/: mod.rs
