[package]
# 别人使用的时候名字是tetris_common，这算是Rust的一个默认规则
name = "tetris-common"
version = "0.1.0"
authors = ["silentdoer <1010993610@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossterm = { git = "https://github.com/crossterm-rs/crossterm" }
