[package]
name = "tetris"
version = "0.1.0"
authors = ["silentdoer <1010993610@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 使用的时候是tetris_common（这个算是Rust的一个默认规则）
tetris-common = {version = "0.1.0", path = "../tetris-common"}

crossterm = "0.14.1"

# 0.7不是数字是字符串，你看成0.7.x就好理解了
rand = "0.7"

lazy_static = "1.4"

futures = "0.3"
